

[tool.setuptools]
packages = ["jax_muzero"] # 只包含主包

[project]
name = "jax_muzero"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.10"

dependencies = [
  "gym[atari]==0.17.3",
  "numpy<2",
  "jax[tpu]==0.4.6",
  # "jaxlib==0.4.24",
  "dm-haiku==0.0.10",
  "distrax",
  "rlax",
  "optax",
  "chex",
  "dm-tree",
  # "atari-py==0.2.7",
  "opencv-python",
  "python-snappy",
  "scipy~=1.7",
  # gym==0.15.7
  # ray[tune]==1.8.0
]

[dependency-groups]
dev = []
